# darts-fast-api

./: README.md  call_api.py  model_endpoint.py  random_forest_model.pkl  train.ipynb  xgb_model.pkl
.devcontainer/: Dockerfile  pyproject.toml
