[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["NewGuy <rudolfluttich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
darts = "^0.30.0"
scikit-learn = "^1.5.2"
fastapi = "^0.115.0"
pandas = "^2.2.3"
jupyter = "^1.1.1"
plotly-express = "^0.4.1"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
